<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/home_bottom_selected"
        android:title="@string/home" />

    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/search_bottom_selected"
        android:title="@string/search" />

    <item
        android:id="@+id/dietFragment"
        android:enabled="true"
        android:icon="@drawable/deit_bottom_selecter"
        android:title="@string/diet" />

    <item
        android:id="@+id/mealPlanFragment"
        android:icon="@drawable/meal_bottom_select"
        android:title="@string/meal_plan" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/chef_nav_bottom"
        android:title="@string/profile" />

</menu>