<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.red_velvet.yumhub.ui.deit.DietViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <com.google.android.material.chip.ChipGroup
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Widget.Material3.ChipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fab_margin"
                app:chipSpacingHorizontal="@dimen/small_space"
                app:chipSpacingVertical="@dimen/small_space"
                app:selectionRequired="false"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/Chip.Regular.Small"
                    android:text="@string/gluten_free"
                    app:chipCornerRadius="@dimen/small_space"
                    android:checkable="true"
                    android:onClick='@{() -> viewModel.onSelectType("Gluten Free")}'
                    app:checkedIconEnabled="false"
                    />
                <com.google.android.material.chip.Chip
                    android:text="@string/ketogenic"
                    app:chipCornerRadius="@dimen/small_space"
                    android:onClick='@{() -> viewModel.onSelectType("Ketogenic")}'
                    app:selectionRequired="true"
                    style="@style/Chip.Regular.Small"
                    app:checkedIconEnabled="false"
                    />

                <com.google.android.material.chip.Chip
                    android:text="@string/vegetarian"
                    app:chipCornerRadius="@dimen/small_space"
                    android:onClick='@{() -> viewModel.onSelectType("vegetarian")}'
                    style="@style/Chip.Regular.Small"
                    app:checkedIconEnabled="false"
                    />
                <com.google.android.material.chip.Chip
                    style="@style/Chip.Regular.Small"
                    android:text="@string/vegan"
                    app:chipCornerRadius="@dimen/small_space"
                    android:onClick='@{() -> viewModel.onSelectType("Vegan")}'
                    app:checkedIconEnabled="false"
                    />
                <com.google.android.material.chip.Chip
                    android:text="@string/lacto_vegetarian"
                    app:chipCornerRadius="@dimen/small_space"
                    android:onClick='@{() -> viewModel.onSelectType("Lacto-Vegetarian")}'
                    style="@style/Chip.Regular.Small"
                    app:checkedIconEnabled="false"
                    />
                <com.google.android.material.chip.Chip
                    style="@style/Chip.Regular.Small"
                    android:text="@string/ovo_vegetarian"
                    app:chipCornerRadius="@dimen/small_space"
                    android:onClick='@{() -> viewModel.onSelectType("Ovo-Vegetarian")}'
                    app:checkedIconEnabled="false"
                    />
                <com.google.android.material.chip.Chip
                    style="@style/Chip.Regular.Small"
                    android:text="@string/pescetarian"
                    app:chipCornerRadius="@dimen/small_space"
                    android:onClick='@{() -> viewModel.onSelectType("Pescetarian")}'
                    app:checkedIconEnabled="false"
                    />
                <com.google.android.material.chip.Chip
                    style="@style/Chip.Regular.Small"
                    android:text="@string/primal"
                    app:chipCornerRadius="@dimen/small_space"
                    android:onClick='@{() -> viewModel.onSelectType("Primal")}'
                    app:checkedIconEnabled="false"
                    />
                <com.google.android.material.chip.Chip
                    style="@style/Chip.Regular.Small"
                    android:text="@string/low_fodmap"
                    app:chipCornerRadius="@dimen/small_space"
                    android:onClick='@{() -> viewModel.onSelectType("Low FODMAP")}'
                    app:checkedIconEnabled="false"
                    />
                <com.google.android.material.chip.Chip
                    style="@style/Chip.Regular.Small"
                    app:chipCornerRadius="@dimen/small_space"
                    android:text="@string/paleo"
                    android:onClick='@{() -> viewModel.onSelectType("Paleo")}'
                    app:checkedIconEnabled="false"
                    />

                <com.google.android.material.chip.Chip
                    style="@style/Chip.Regular.Small"
                    android:text="@string/whole30"
                    app:chipCornerRadius="@dimen/small_space"
                    android:onClick='@{() -> viewModel.onSelectType("Whole30")}'
                    app:checkedIconEnabled="false"
                    />
            </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>